# named-einsum

./: README.md  pyproject.toml
.github/workflows/: coverage.yml  publish-to-pypi.yml
src/neinsum/: __init__.py  _named_einsum.py
tests/: test_named_einsum.py
